compiler/testData/diagnostics/tests/sealed/LocalSealed.kt
// FIR_IDENTICAL
fun foo() {
    <!WRONG_MODIFIER_TARGET!>sealed<!> class My
}
